--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,6 @@ modbus-app/configs/
 modbus-app/__pycache__/
 modbus-app/services/__pycache__/
 modbus-app/services/mocks/__pycache__/
+modbus-app/model/__pycache__/
+modbus-app/model/mocks/__pycache__/
 modbus-app/translation/*qm
